# code-index-mcp

./: .coverage  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CRUSH.md  IMPLEMENTATION_REPORT.md  Makefile  PHASE1_REVIEW.md  PHASE3_AUDIT_REPORT.md  PHASE3_RESULTS.md  README.md  README_CN.md  SYMBOL_SEARCH_FIX_REPORT.md  TESTING.md  baseline1.json  check_mcp.py  check_psutil.py  concurrent_file_operations_guide.md  debug_apply_edit.py  debug_backup_detailed.py  debug_backup_direct.py  debug_backup_lock.py  debug_backup_test.txt  debug_cache_test.py  debug_edit_steps.py  debug_file_lock.py  debug_indexing.py  debug_original_test.txt  debug_scan.py  debug_t006.py  debug_t010.py  debug_timing.py  demo_symbol_search.py  file-with-dashes.txt  file_with_spaces.txt  file_with_underscores.txt  memory_baseline_report.json  (+33 more)
.edit_backup/: test_semantic_edit.py.1758553532.bak
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: backward_compatibility_assessment.md  code_complexity_analysis.md  coding_standards.md  project_structure_analysis.md  suggested_commands.md
.specify/memory/: constitution.md
openspec/: project.md
scripts/: check_types.py  measure_apply_edit_baseline.py  measure_index_baseline.py  measure_memory_baseline.py  run_tests.py
src/core/: __init__.py  (+25 more)
test_subdir/: test_file.txt
tests/: __init__.py  conftest.py  simple_phase4_test.py  test_atomic_edge_cases.py  test_backup_baseline.py  test_backwards_compatibility.py  test_backwards_compatibility_fixed.py  test_cache_performance.py  test_concurrent_operations.py  test_concurrent_operations_simple.py  test_core_functionality.py  test_core_services.py  test_edit_content_validation.py  test_file_lock_reliability.py  test_final_performance_validation.py  test_hash_performance.py  test_index_integration.py  test_lock_manager.py  test_lockfree_edit.py  test_lru_eviction.py  test_memory_backup_config.py  test_memory_backup_integration.py  test_memory_limit_enforcement.py  test_performance.py  test_phase1_compliance.py  test_phase1_memory_optimization.py  test_phase3_performance.py  test_production_stress.py  test_python_semantic.py  test_scip_protocol.py  test_search_basics.py  test_search_basics_simple.py  test_search_integration.py  test_semantic_edit_service.py  test_semantic_fields.py  test_semantic_indexing.py  test_semantic_search_service.py  test_semantic_search_simple.py  test_simple_architecture.py  test_smart_edit.py  (+4 more)
tests/sample-projects/rust/user-management/: Cargo.toml
tests/sample-projects/rust/user-management/src/services/: user_manager.rs
tests/sample-projects/rust/user-management/src/utils/: validators.rs
(+156 files in other folders)
