[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-index-mcp"
version = "2.3.2"
description = "Code indexing and analysis tools for LLMs using MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "johnhuang316"}
]
dependencies = [
    "mcp>=0.3.0",
    "watchdog>=3.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "tree-sitter-zig>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "pathspec>=0.12.1",
    "msgpack>=1.0.0",
    "xxhash>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/johnhuang316/code-index-mcp"
"Bug Tracker" = "https://github.com/johnhuang316/code-index-mcp/issues"

[project.scripts]
code-index-mcp = "code_index_mcp.server_unified:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
python_version = "3.10"
packages = ["src/code_index_mcp"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/code_index_mcp"]
omit = [
    "tests/*",
    "src/code_index_mcp/server.py",  # MCP server entry point
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
